# mpcaHydro

./: .gitignore  Ini.pypirrc  README.md  mpcahydro-0.1.0-pyhbf21a9e_0.conda  pyproject.toml
docs/: api.rst  conf.py  index.rst
src/: WISKI.py  data_manager.py  etlCSG.py  etlSWD.py  etlWISKI.py  etlWPLMN.py
src/mpcaHydro/: WISKI.py  __init__.py  calibration_config.py  calibration_dataclasses.py  calibration_functions.py  calibration_io.py  data_manager.py  data_manager_functions.py  equis.py  etlCSG.py  etlSWD.py  etlWISKI.py  etlWPLMN.py  outlets.py  pywisk.py  reports.py  sql_loader.py  storage.py  swd.py  warehouse.py  warehouse_functions.py  wiski.py  xref.py
src/mpcaHydro/data/: EQUIS_PARAMETER_XREF.csv  WISKI_EQUIS_XREF.csv  WISKI_QUALITY_CODES.csv  outlet.duckdb  outlets.duckdb  stations_EQUIS.gpkg  stations_EQUIS.gpkg-shm  stations_EQUIS.gpkg-wal  stations_wiski.gpkg  wiskiweb01.pca.state.mn.us.crt
src/mpcaHydro/examples/: example_database.py
src/mpcaHydro/sources/: equis.py  swd.py  waterdata.py  wiski.py  wqp.py
src/mpcaHydro/sql/: analytics_tables.sql  calibration_schema.sql  derived_tables.sql  outlets_schema.sql  schemas.sql  staging_tables.sql  transforms_baseflow.sql  transforms_equis.sql  transforms_wiski.sql  views_analytics.sql  views_outlets.sql  views_reports.sql
src/mpcaHydro/templates/: calibration_config_template.json  calibration_config_template.toml  calibration_config_template.yaml
tests/: pixi.toml  test_calibration_config.py  test_calibration_functions.py  test_data_manager_functions.py  test_pywisk.py
tests/fixtures/: wiski_H67014001_2020.parquet
tests/integration/: README.md  conftest.py  test_data_manager.py  test_data_manager_integration.py  test_equis.py  test_equis_integration.py  test_pywisk_integration.py  test_warehouse.py  test_wiski.py  test_wiski_integration.py
tests/unit/: test_equis.py  test_wiski.py
