[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hspf_tools"
version = "2.0.0"
dependencies = [
  "httpx",
  "gidgethub[httpx]>4.0.0",
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
]
requires-python = ">=3.8"
authors = [
  {name = "Mulu Fratkin", email = "michael.fratkin@state.mn.us"},
]
maintainers = [
  {name = "Mulu Fratkin", email = "michael.fratkin@state.mn.us"},
]
description = "Python modules for interacting and manipulating HSPF model files"
readme = "README.rst"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["HSPF", "UCI", "Minnesota", "Watershed Modeling"]
classifiers = [
  "Development Status :: 1 - Development",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"