[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpcaHydro"
urls = { "Homepage" = "https://github.com/mfratkin1/mpcaHydro" }  # ? Add this!
version = "2.2.3"
dependencies = [
  "pandas",
  "requests",
  "pathlib",
  "duckdb",
  "oracledb",
  "baseflow"
]
requires-python = ">=3.8"
authors = [
  {name = "Mulu Fratkin", email = "michael.fratkin@state.mn.us"},
]
maintainers = [
  {name = "Mulu Fratkin", email = "michael.fratkin@state.mn.us"},
]
description = "Python package for downloading MPCA hydrology data"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["MPCA","Hydrology"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.optional-dependencies]
tests = ["pytest"]
docs = [
  "sphinx",
  "sphinx-autodoc-typehints",
]

[tool.pytest.ini_options]
markers = [
    "network: test requires network access to WISKI/KISTERS API",
    "credentials: test requires Oracle database credentials",
    "integration: mark test as integration test",
]